# pants

./: .arcconfig  .deepsource.toml  .env  .eslintignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .ignored_revisions  .isort.cfg  .mailmap  .pants  .python-interpreter-constraints  .reviewboardrc  .saplings  .scalafix.conf  .scalafmt.conf  .semgrep.yml  .taplo.toml  .travis.osx.yml  .travis.test.yml  .travis.yml  0.0.28.CHANGELOG.txt  1.0.html  3rdparty.html  3rdparty_jvm.html  3rdparty_py.html  AGENTS.md  BUILD  BUILD.tools  BUILD_ROOT  CLAUDE.md  CODE_OF_CONDUCT.md  COMMITTERS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Jenkinsfile  LICENSE  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  (+176 more)
src/rust/: Cargo.toml  rust-toolchain
src/rust/.cargo/: config.toml
src/rust/address/: Cargo.toml
src/rust/address/src/: lib.rs
src/rust/async_latch/: Cargo.toml
src/rust/async_latch/src/: lib.rs
src/rust/async_value/: Cargo.toml
src/rust/async_value/src/: lib.rs  tests.rs
src/rust/cache/: Cargo.toml
src/rust/cache/src/: lib.rs
src/rust/client/: Cargo.toml
src/rust/client/src/: client.rs  client_tests.rs  lib.rs  lib_tests.rs  main.rs
src/rust/concrete_time/: Cargo.toml
src/rust/concrete_time/src/: lib.rs  tests.rs
src/rust/dep_inference/: Cargo.toml  build.rs
src/rust/dep_inference/src/: code.rs  lib.rs
src/rust/engine/: .gitignore  ASYNC.md  BUILD  Cargo.toml  README.md  VERSION  build.rs  cargo_build_shim.sh  cbindgen.toml  run-all-tests.sh  rust-toolchain  rustfmt.toml  sandboxed_cargo.sh
src/rust/engine/.cargo/: config  config.toml
src/rust/engine/address/: Cargo.toml
src/rust/engine/async_latch/: Cargo.toml
src/rust/engine/async_semaphore/: Cargo.toml
src/rust/engine/async_value/: Cargo.toml
src/rust/engine/bazel_protos/: BUILD  Cargo.toml
src/rust/engine/boxfuture/: .gitignore  Cargo.toml
src/rust/engine/build_utils/: Cargo.toml
src/rust/engine/cache/: Cargo.toml
src/rust/engine/cargo_util/: Cargo.toml
src/rust/engine/client/: Cargo.toml
src/rust/engine/concrete_time/: Cargo.toml
src/rust/engine/dep_inference/: Cargo.toml  build.rs
src/rust/engine/docker/: Cargo.toml
src/rust/engine/engine_cffi/: Cargo.toml  build.rs  cbindgen.toml
src/rust/engine/engine_pyo3/: Cargo.toml  build.rs
src/rust/engine/engine_pyo3_extension/: Cargo.toml  build.rs
src/rust/engine/fs/: Cargo.toml
src/rust/engine/graph/: Cargo.toml  README.md
src/rust/engine/grpc_util/: Cargo.toml  build.rs
src/rust/engine/hashing/: Cargo.toml
src/rust/engine/logging/: Cargo.toml  build.rs
src/rust/engine/nailgun/: Cargo.toml
src/rust/engine/options/: Cargo.toml
src/rust/engine/pantsd/: Cargo.toml  build.rs
src/rust/engine/parsing/: Cargo.toml
src/rust/engine/persistent_cache/: Cargo.toml
src/rust/engine/process_execution/: Cargo.toml  build.rs
src/rust/engine/process_executor/: .gitignore  Cargo.toml
src/rust/engine/protos/: BUILD  Cargo.toml  build.rs
src/rust/engine/remote_provider/: Cargo.toml
src/rust/engine/resettable/: Cargo.toml
src/rust/engine/rule_graph/: Cargo.toml  README.md
src/rust/engine/serverset/: Cargo.toml
src/rust/engine/sharded_lmdb/: Cargo.toml
src/rust/engine/src/: boxfuture.rs  cffi_build.rs  cffi_externs.rs  console_ui.rs  context.rs  core.rs  downloads.rs  execution.rs  externs.rs  fs.rs  git_ignore_session.rs  graph.rs  handles.rs  hash.rs  interning.rs  intrinsics.rs  lib.rs  nodes.rs  python.rs  python_parsing.rs  rule_graph.rs  scheduler.rs  selectors.rs  session.rs  tasks.rs  types.rs  util.rs  watch.rs  watch_tests.rs
src/rust/engine/stdio/: Cargo.toml
src/rust/engine/tar_api/: Cargo.toml
src/rust/engine/task_executor/: Cargo.toml
src/rust/engine/testutil/: Cargo.toml
src/rust/engine/tryfuture/: Cargo.toml
src/rust/engine/ui/: Cargo.toml
src/rust/engine/watch/: Cargo.toml
src/rust/engine/workunit_store/: Cargo.toml
src/rust/entry-point/: Cargo.toml
src/rust/entry-point/src/: main.rs
src/rust/fs/: Cargo.toml
src/rust/fs/brfs/: Cargo.toml
src/rust/fs/fs_util/: Cargo.toml
src/rust/fs/src/: directory.rs  directory_tests.rs  gitignore.rs  gitignore_stack.rs  glob_matching.rs  glob_matching_tests.rs  lib.rs  posixfs.rs  posixfs_tests.rs  tests.rs  testutil.rs
src/rust/fs/store/: Cargo.toml
src/rust/graph/: Cargo.toml
src/rust/graph/src/: context.rs  core.rs  entry.rs  lib.rs  nodes.rs  selectors.rs  tests.rs
src/rust/grpc_util/: Cargo.toml  build.rs
src/rust/grpc_util/protos/: test.proto
src/rust/grpc_util/src/: channel.rs  headers.rs  lib.rs  metrics.rs  prost.rs  retry.rs  tls.rs
src/rust/hashing/: Cargo.toml
src/rust/hashing/src/: digest_tests.rs  fingerprint_tests.rs  hasher_tests.rs  lib.rs
src/rust/logging/: Cargo.toml
src/rust/logging/src/: lib.rs  logger.rs
src/rust/nailgun/: Cargo.toml
src/rust/nailgun/src/: client.rs  lib.rs  server.rs  tests.rs
src/rust/options/: Cargo.toml
src/rust/options/src/: arg_splitter.rs  build_root.rs  build_root_tests.rs  cli_alias.rs  cli_alias_tests.rs  config.rs  config_tests.rs  env.rs  env_tests.rs  flags.rs  flags_tests.rs  fromfile.rs  fromfile_tests.rs  id.rs  id_tests.rs  lib.rs  pants_ng_flags.rs  pants_ng_flags_tests.rs  parse.rs  parse_tests.rs  scope.rs  tests.rs
src/rust/pants_lock/: Cargo.toml
src/rust/pants_lock/src/: main.rs
src/rust/pants_ng/: Cargo.toml
src/rust/pants_ng/client/: Cargo.toml
src/rust/pants_ng/options/: Cargo.toml
src/rust/pantsd/: Cargo.toml
src/rust/pantsd/src/: lib.rs  pantsd_testing.rs  pantsd_tests.rs
src/rust/process_execution/: Cargo.toml
src/rust/process_execution/children/: Cargo.toml
src/rust/process_executor/: Cargo.toml
src/rust/protos/: Cargo.toml  build.rs
src/rust/protos/src/: lib.rs  (+5 more)
src/rust/remote_provider/: Cargo.toml
src/rust/rule_graph/: Cargo.toml  README.md
src/rust/sharded_lmdb/: Cargo.toml
src/rust/stdio/: Cargo.toml
src/rust/task_executor/: Cargo.toml
src/rust/testutil/: Cargo.toml
src/rust/tryfuture/: Cargo.toml
src/rust/ui/: Cargo.toml
src/rust/watch/: Cargo.toml
src/rust/workunit_store/: Cargo.toml
(+11300 files in other folders)
