[package]
version = "0.0.1"
edition = "2021"
name = "async_latch"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
