[package]
name = "entry-point"
version = "0.1.0"
authors = ["Greg Shuflin <greg.shuflin@toolchain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nails = "0.4.0"
tokio = { version = "0.2.13", features = ["rt-core", "tcp"] }
futures = "0.3"
