[package]
version = "0.0.1"
edition = "2024"
name = "logging"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
arc-swap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
stdio = { path = "../stdio" }

[build-dependencies]
cargo_metadata = "0.23"

[lints]
workspace = true
