[package]
version = "0.0.1"
edition = "2024"
name = "options"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
hashing = { path = "../hashing" }
itertools = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
parking_lot = { workspace = true }
peg = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shellexpand = { workspace = true }
shlex = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
whoami = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
