[package]
version = "0.0.1"
edition = "2024"
name = "process_execution"
authors = ["Pants Build <pantsbuild@gmail.com>"]
publish = false

[dependencies]
async-trait = { workspace = true }
async-oncecell = { workspace = true }
protos = { path = "../protos" }
bytes = { workspace = true }
children = { path = "./children" }
cache = { path = "../cache" }
derivative = { workspace = true }
deepsize = { workspace = true, features = ["log"] }
grpc_util = { path = "../grpc_util" }
fs = { path = "../fs" }
futures = { workspace = true }
hashing = { path = "../hashing" }
libc = { workspace = true }
log = { workspace = true }
nails = { workspace = true }
sandboxer = { path = "./sandboxer" }
shell-quote = { workspace = true }
store = { path = "../fs/store" }
task_executor = { path = "../task_executor" }
tempfile = { workspace = true }
concrete_time = { path = "../concrete_time" }
tokio = { workspace = true, features = ["net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
uname = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
workunit_store = { path = "../workunit_store" }
regex = { workspace = true }
parking_lot = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
shlex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tryfuture = { path = "../tryfuture" }

[dev-dependencies]
maplit = { workspace = true }
mock = { path = "../testutil/mock" }
parking_lot = { workspace = true }
sharded_lmdb = { path = "../sharded_lmdb" }
tempfile = { workspace = true }
testutil = { path = "../testutil" }
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
